# options-vol-research

./: .gitignore  README.md  requirements.txt
benchmarks/: bench_pricer.py
cpp/: CMakeLists.txt  setup.py
cpp/benchmarks/: bench_python.py  bench_surface.cpp
cpp/src/: bindings.cpp  black_scholes.hpp  iv_solver.hpp
cpp/tests/: test_greeks.cpp
notebooks/: 01_vol_surface_exploration.ipynb  02_delta_hedge_pnl.ipynb  03_cpp_backtest.ipynb
scripts/: build_vol_surface.py  run_delta_hedge_backtest.py
src/backtest/: delta_hedge.py
src/cpp/: svi.hpp
src/data/: fetch.py
src/pricing/: _pricer.py  black_scholes.py  implied_vol.py
src/vol_surface/: surface.py  svi.py
